# aima

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml
configs/: base.yaml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.dev.yml  init.sql
memory/: architecture.md  architecture_chunks.json  architecture_memory.md
skypilot/: gpu-a100.yaml  gpu-h100.yaml  setup.sh
src/: agents.py  environment.py
src/api/: __init__.py  main.py
src/crown_common/: __init__.py  config.py  gpu_utils.py  logging.py  storage.py  training_utils.py
src/envs/: __init__.py  example_env.py
src/scripts/: __init__.py  train_example.py  train_mps_example.py
tests/: __init__.py  test_api.py  test_storage.py
