[project]
name = "crown-template"
version = "0.1.0"
description = "Crown 621 Python Service Template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.0",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Storage
    "asyncpg>=0.29.0",
    "pgvector>=0.2.4",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "boto3>=1.34.0",  # For S3/MinIO
    
    # ML/AI
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "transformers>=4.37.0",
    "accelerate>=0.26.0",
    "datasets>=2.14.0",
    "wandb>=0.16.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "psutil>=5.9.0",  # For memory monitoring
    
    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.40.0",
    
    # Utils
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "ipython>=8.20.0",
    "notebook>=7.0.0",
]

mlx = [
    "mlx>=0.12.0",
    "mlx-lm>=0.10.0",  # For language models
]

rl = [
    "gymnasium>=0.29.0",
    "trl>=0.7.0",
    "stable-baselines3>=2.2.0",
]

cloud = [
    "skypilot[aws]>=0.6.0",
    "ray[default]>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]